--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
@@ -3104,6 +3105,247 @@
    ],
    "source": [
     "wiki_movies_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "url                      object\n",
+       "year                      int64\n",
+       "imdb_link                object\n",
+       "title                    object\n",
+       "Based on                 object\n",
+       "Starring                 object\n",
+       "Cinematography           object\n",
+       "Release date             object\n",
+       "Running time             object\n",
+       "Country                  object\n",
+       "Language                 object\n",
+       "Budget                   object\n",
+       "Box office               object\n",
+       "Director                 object\n",
+       "Distributor              object\n",
+       "Editor(s)                object\n",
+       "Composer(s)              object\n",
+       "Producer(s)              object\n",
+       "Production company(s)    object\n",
+       "Writer(s)                object\n",
+       "imdb_id                  object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify which columns need converting\n",
+    "wiki_movies_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create data series that drops missing values for box office\n",
+    "box_office = wiki_movies_df['Box office'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34                           [US$, 4,212,828]\n",
+       "54      [$6,698,361 (, United States, ), [2]]\n",
+       "74                    [$6,488,144, (US), [1]]\n",
+       "126                [US$1,531,489, (domestic)]\n",
+       "130                          [US$, 4,803,039]\n",
+       "                        ...                  \n",
+       "6980               [$99.6, million, [4], [5]]\n",
+       "6994                   [$365.6, million, [1]]\n",
+       "6995                         [$53.8, million]\n",
+       "7015                     [$435, million, [7]]\n",
+       "7048                   [$529.3, million, [4]]\n",
+       "Name: Box office, Length: 135, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use lambda 'is not a string' function \n",
+    "box_office[box_office.map(lambda x: type(x) != str)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use join statement with a space\n",
+    "box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          $21.4 million\n",
+       "1           $2.7 million\n",
+       "2            $57,718,089\n",
+       "3             $7,331,647\n",
+       "4       $6,939,946 (USA)\n",
+       "              ...       \n",
+       "7070       $19.4 million\n",
+       "7071       $41.9 million\n",
+       "7072       $76.1 million\n",
+       "7073       $38.4 million\n",
+       "7074        $5.5 million\n",
+       "Name: Box office, Length: 5485, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_office"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create variable for box office regex string\n",
+    "form_one = r'\\$\\d+\\.?\\d*\\s*[mb]illion'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3896"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count how many box office values match this form\n",
+    "box_office.str.contains(form_one, flags=re.IGNORECASE).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1544"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Repeat this process with another form of values\n",
+    "form_two = r'\\$\\d{1,3}(?:,\\d{3})+'\n",
+    "box_office.str.contains(form_two, flags=re.IGNORECASE).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create two Boolean series\n",
+    "matches_form_one = box_office.str.contains(form_one, flags=re.IGNORECASE)\n",
+    "matches_form_two = box_office.str.contains(form_two, flags=re.IGNORECASE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600                      $5000 (US)\n",
+       "1070                     35,254,617\n",
+       "1480                     £3 million\n",
+       "1865                   ¥1.1 billion\n",
+       "2032                            N/A\n",
+       "2091                           $309\n",
+       "2665    926,423 admissions (France)\n",
+       "3631                            TBA\n",
+       "3879       CN¥3.650 million (China)\n",
+       "4116                     £7,385,434\n",
+       "4306                            $30\n",
+       "4561        $45.2k (only in Turkey)\n",
+       "5447                          £2.56\n",
+       "5784                       413 733$\n",
+       "6013                        Unknown\n",
+       "6369                          $111k\n",
+       "6370                           $588\n",
+       "6593                 less than $372\n",
+       "6843                        8 crore\n",
+       "Name: Box office, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find values that do not match either forms\n",
+    "box_office[~matches_form_one & ~matches_form_two]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fix forms to fit these values\n",
+    "form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
+    "form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)'\n",
+    "box_office = box_office.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)"
    ]
   },
   {
