--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
        "26024288  270896    71878     2.0  1257031858"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
        " 'Polish']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
        "7080"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1854,7 @@
        "[5 rows x 75 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
        "[2 rows x 75 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2126,7 @@
        " 'year']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
        " 'year']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2558,7 @@
        " ['imdb_id', 0]]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2599,7 @@
        " 'imdb_id']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
        "[7033 rows x 21 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3109,7 +3109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3139,7 +3139,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3181,7 +3181,7 @@
        "Name: Box office, Length: 135, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3193,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3203,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3223,7 +3223,7 @@
        "Name: Box office, Length: 5485, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3234,7 +3234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3244,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3253,7 +3253,7 @@
        "3896"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3265,7 +3265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3274,7 @@
        "1544"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3287,7 +3287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3298,35 +3298,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "600                      $5000 (US)\n",
-       "1070                     35,254,617\n",
-       "1480                     £3 million\n",
-       "1865                   ¥1.1 billion\n",
-       "2032                            N/A\n",
-       "2091                           $309\n",
-       "2665    926,423 admissions (France)\n",
-       "3631                            TBA\n",
-       "3879       CN¥3.650 million (China)\n",
-       "4116                     £7,385,434\n",
-       "4306                            $30\n",
-       "4561        $45.2k (only in Turkey)\n",
-       "5447                          £2.56\n",
-       "5784                       413 733$\n",
-       "6013                        Unknown\n",
-       "6369                          $111k\n",
-       "6370                           $588\n",
-       "6593                 less than $372\n",
-       "6843                        8 crore\n",
+       "34                         US$ 4,212,828\n",
+       "79                              $335.000\n",
+       "110                   $4.35-4.37 million\n",
+       "130                        US$ 4,803,039\n",
+       "600                           $5000 (US)\n",
+       "731                         $ 11,146,270\n",
+       "957                             $ 50,004\n",
+       "1070                          35,254,617\n",
+       "1147    $ 407,618 (U.S.) (sub-total) [1]\n",
+       "1446                        $ 11,829,959\n",
+       "1480                          £3 million\n",
+       "1611                            $520.000\n",
+       "1865                        ¥1.1 billion\n",
+       "2032                                 N/A\n",
+       "2091                                $309\n",
+       "2130               US$ 171.8 million [9]\n",
+       "2257                   US$ 3,395,581 [1]\n",
+       "2263            $ 1,223,034 ( domestic )\n",
+       "2347                            $282.175\n",
+       "2638            $ 104,883 (US sub-total)\n",
+       "2665         926,423 admissions (France)\n",
+       "2697      $ 1.7 million (US) (sub-total)\n",
+       "2823                            $414.000\n",
+       "2924                            $621.000\n",
+       "3088           $32 [2] –33.1 million [1]\n",
+       "3631                                 TBA\n",
+       "3859                  $38.9–40.3 million\n",
+       "3879            CN¥3.650 million (China)\n",
+       "4116                          £7,385,434\n",
+       "4123                            $161.000\n",
+       "4261                  $20.7–23.9 million\n",
+       "4306                              $20-30\n",
+       "4492                        $47.7 millon\n",
+       "4561             $45.2k (only in Turkey)\n",
+       "4662                USD$ 8.2 million [2]\n",
+       "5362                   $ 142 million [3]\n",
+       "5447                               £2.56\n",
+       "5784                            413 733$\n",
+       "6013                             Unknown\n",
+       "6145                  $17.5–18.4 million\n",
+       "6234                  $41.8–41.9 million\n",
+       "6369                               $111k\n",
+       "6370                                $588\n",
+       "6593                      less than $372\n",
+       "6829                    $ 41 million [3]\n",
+       "6843                             8 crore\n",
+       "6904                         $6.9 millon\n",
        "Name: Box office, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3338,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,6 +3374,100 @@
     "form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
     "form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)'\n",
     "box_office = box_office.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create skeleton formula and add code later. Create function to parse dollars\n",
+    "def parse_dollars(s):\n",
+    "    # if s is not a string, return NaN\n",
+    "    if type(s) != str:\n",
+    "        return np.nan\n",
+    "    # if input is of the form $###.# million\n",
+    "    if re.match(r'\\$\\s*\\d+\\.?\\d*\\s*milli?on', s, flags=re.IGNORECASE):\n",
+    "        # remove dollar sign and \" million\"\n",
+    "        s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
+    "        # convert to float and multiply by a million\n",
+    "        value = float(s) * 10**6\n",
+    "        # return value\n",
+    "        return value\n",
+    "    \n",
+    "    # if input is of the form $###.# billion\n",
+    "    elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*billi?on', s, flags=re.IGNORECASE):\n",
+    "        # remove dollar sign and \" billion\"\n",
+    "        s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
+    "        # convert to float and multiply by a billion\n",
+    "        value = float(s) * 10**9\n",
+    "        # return value\n",
+    "        return value\n",
+    "    \n",
+    "    # if input is of the form $###,###,###\n",
+    "    elif re.match(r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)', s, flags=re.IGNORECASE):\n",
+    "        # remove dollar sign and commas\n",
+    "        s = re.sub('\\$|,','', s)\n",
+    "        # convert to float\n",
+    "        value = float(s)\n",
+    "        # return value\n",
+    "        return value\n",
+    "    \n",
+    "    # otherwise, return NaN\n",
+    "    else:\n",
+    "        return np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract values and apply parse dollars function to first column in dataframe\n",
+    "wiki_movies_df['box_office'] = box_office.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       21400000.0\n",
+       "1        2700000.0\n",
+       "2       57718089.0\n",
+       "3        7331647.0\n",
+       "4        6939946.0\n",
+       "           ...    \n",
+       "7071    41900000.0\n",
+       "7072    76100000.0\n",
+       "7073    38400000.0\n",
+       "7074     5500000.0\n",
+       "7075           NaN\n",
+       "Name: box_office, Length: 7033, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki_movies_df['box_office']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop box office column\n",
+    "wiki_movies_df.drop('Box office', axis=1, inplace=True)"
    ]
   },
   {
