--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -3472,6 +3472,188 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create budget variable\n",
+    "budget = wiki_movies_df['Budget'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert lists to strings\n",
+    "budget = budget.map(lambda x: ' '.join(x) if type(x) == list else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove values between dollar sign and hyphen\n",
+    "budget = budget.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use same matching patterns\n",
+    "form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
+    "form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "136                         Unknown\n",
+       "204     60 million Norwegian Kroner\n",
+       "478                         Unknown\n",
+       "973             $34 [3] [4] million\n",
+       "1126               $120 [4] million\n",
+       "1226                        Unknown\n",
+       "1278                            HBO\n",
+       "1374                     £6,000,000\n",
+       "1397                     13 million\n",
+       "1480                   £2.8 million\n",
+       "1734                   CAD2,000,000\n",
+       "1913     PHP 85 million (estimated)\n",
+       "1948                    102,888,900\n",
+       "1953                   3,500,000 DM\n",
+       "1973                     ₤2,300,874\n",
+       "2281                     $14 milion\n",
+       "2451                     ₤6,350,000\n",
+       "3144                   € 40 million\n",
+       "3360               $150 [6] million\n",
+       "3418                        $218.32\n",
+       "3802                   £4.2 million\n",
+       "3906                            N/A\n",
+       "3959                    760,000 USD\n",
+       "4470                       19 crore\n",
+       "4641                    £17 million\n",
+       "5034              $$200 [4] million\n",
+       "5055           $155 [2] [3] million\n",
+       "5419                $40 [4] million\n",
+       "5424                            N/A\n",
+       "5447                     £4 million\n",
+       "5671                    €14 million\n",
+       "5687                   $ dead link]\n",
+       "6385               £ 12 million [3]\n",
+       "6593                     £3 million\n",
+       "6821                  £12.9 million\n",
+       "6843                      3.5 crore\n",
+       "6895                        919,000\n",
+       "7070                   €4.3 million\n",
+       "Name: Budget, dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Parse data\n",
+    "matches_form_one = budget.str.contains(form_one, flags=re.IGNORECASE)\n",
+    "matches_form_two = budget.str.contains(form_two, flags=re.IGNORECASE)\n",
+    "budget[~matches_form_one & ~matches_form_two]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "136                         Unknown\n",
+       "204     60 million Norwegian Kroner\n",
+       "478                         Unknown\n",
+       "973                     $34 million\n",
+       "1126                   $120 million\n",
+       "1226                        Unknown\n",
+       "1278                            HBO\n",
+       "1374                     £6,000,000\n",
+       "1397                     13 million\n",
+       "1480                   £2.8 million\n",
+       "1734                   CAD2,000,000\n",
+       "1913     PHP 85 million (estimated)\n",
+       "1948                    102,888,900\n",
+       "1953                   3,500,000 DM\n",
+       "1973                     ₤2,300,874\n",
+       "2281                     $14 milion\n",
+       "2451                     ₤6,350,000\n",
+       "3144                   € 40 million\n",
+       "3360                   $150 million\n",
+       "3418                        $218.32\n",
+       "3802                   £4.2 million\n",
+       "3906                            N/A\n",
+       "3959                    760,000 USD\n",
+       "4470                       19 crore\n",
+       "4641                    £17 million\n",
+       "5034                  $$200 million\n",
+       "5055                   $155 million\n",
+       "5419                    $40 million\n",
+       "5424                            N/A\n",
+       "5447                     £4 million\n",
+       "5671                    €14 million\n",
+       "5687                   $ dead link]\n",
+       "6385                  £ 12 million \n",
+       "6593                     £3 million\n",
+       "6821                  £12.9 million\n",
+       "6843                      3.5 crore\n",
+       "6895                        919,000\n",
+       "7070                   €4.3 million\n",
+       "Name: Budget, dtype: object"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove citation references\n",
+    "budget = budget.str.replace(r'\\[\\d+\\]\\s*', '')\n",
+    "budget[~matches_form_one & ~matches_form_two]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract values and apply to first column in dataframe\n",
+    "wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop budget column\n",
+    "wiki_movies_df.drop('Budget', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
