prepared file for extraction.

--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from sqlalchemy import create_engine\n",
+    "from config import db_password"
    ]
   },
   {
@@ -8470,6 +8472,26 @@
    ],
    "source": [
     "movies_with_ratings_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connection string\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create database engine\n",
+    "engine = create_engine(db_string)"
    ]
   },
   {
