Finished importing ratings data.

--- a/Movies-ETL.ipynb
+++ b/Movies-ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "import re\n",
     "from sqlalchemy import create_engine\n",
-    "from config import db_password"
+    "from config import db_password\n",
+    "import time"
    ]
   },
   {
@@ -8502,6 +8503,65 @@
    "source": [
     "# import movie data\n",
     "movies_df.to_sql(name='movies', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 84.0114517211914 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 185.07139015197754 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 288.40605068206787 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 388.0736172199249 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 487.07658553123474 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 611.9465775489807 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 729.9889535903931 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 847.8239262104034 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 965.2389407157898 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 1083.1606607437134 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 1201.9529886245728 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 1320.0013399124146 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 1437.499163389206 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 1547.6588037014008 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 1657.2883529663086 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 1759.9934091567993 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 1867.182734966278 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 1966.0742905139923 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 2065.5399050712585 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 2173.5978276729584 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 2277.433979988098 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 2382.723318338394 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 2484.3567814826965 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 2583.189300775528 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 2692.7650401592255 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 2811.8207449913025 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 2814.6541736125946 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a variable for the number of rows imported\n",
+    "rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\n",
+    "\n",
+    "    # print out the range of rows that are being imported\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "\n",
+    "    # increment the number of rows imported by the size of 'data'\n",
+    "    rows_imported += len(data)\n",
+    "\n",
+    "    # print that the rows have finished importing\n",
+    "    # add elapsed time to final print out\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
    ]
   },
   {
