--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -28,8 +28,11 @@
     "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
     "\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
-    "    \n",
+    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "        wiki_movies_raw = json.load(file)\n",
+    "        \n",
     "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
+    "    wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
     "    \n",
     "    # 5. Return the three DataFrames\n",
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
@@ -37,14 +40,14 @@
     "# 6 Create the path to your file directory and variables for the three files. \n",
     "file_dir = \"C:/Users/nateb/Documents/Data Bootcamp 2021/Week 8/Movies-ETL/\"\n",
     "# Wikipedia data\n",
-    "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
+    "wiki_file = f'{file_dir}/wikipedia-movies.json'\n",
     "# Kaggle metadata\n",
     "kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
     "# MovieLens rating data.\n",
     "ratings_file = f'{file_dir}/ratings.csv'\n",
     "\n",
     "# 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "wiki_file, kaggle_file, ratings_file = import_data()"
    ]
   },
   {
