--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -54,22 +54,27 @@
     "# 2 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def function_name():\n",
+    "def wiki_import():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    \n",
+    "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
     "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
-    "    \n",
+    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # 3. Write a list comprehension to filter out TV shows.\n",
-    "    \n",
+    "    wiki_movies = [movie for movie in wiki_movies_raw\n",
+    "               if ('Director' in movie or 'Directed by' in movie)\n",
+    "                   and 'imdb_link' in movie\n",
+    "                   and 'No. of episodes' not in movie]\n",
     "\n",
     "    # 4. Write a list comprehension to iterate through the cleaned wiki movies list\n",
     "    # and call the clean_movie function on each movie.\n",
-    "    \n",
+    "    clean_movies = [clean_movie(movie) for movie in wiki_movies]\n",
     "\n",
     "    # 5. Read in the cleaned movies list from Step 4 as a DataFrame.\n",
-    "\n",
+    "    wiki_movies_df = pd.DataFrame(clean_movies)\n",
     "\n",
     "    # 6. Write a try-except block to catch errors while extracting the IMDb ID using a regular expression string and\n",
     "    #  dropping any imdb_id duplicates. If there is an error, capture and print the exception.\n",
