--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -79,8 +79,9 @@
     "    # 6. Write a try-except block to catch errors while extracting the IMDb ID using a regular expression string and\n",
     "    #  dropping any imdb_id duplicates. If there is an error, capture and print the exception.\n",
     "    try:\n",
-    "        \n",
-    "    except \n",
+    "        wiki_movies_df['imdb_id'] = wiki_movies_df['imdb_link'].str.extract(r'(tt\\d{7})')\n",
+    "        wiki_movies_df.drop_duplicates(subset='imdb_id', inplace=True)\n",
+    "    except error as e: print(e)\n",
     "\n",
     "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
     "    \n",
