--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -90,17 +90,49 @@
     "    box_office = wiki_movies_df['Box office'].dropna()\n",
     "    \n",
     "    # 9. Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
-    "    \n",
+    "    box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "\n",
     "    # 10. Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
-    "   \n",
+    "    form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
     "    # 11. Write a regular expression to match the three elements of \"form_two\" of the box office data.\n",
-    "    \n",
+    "    form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)'\n",
     "\n",
     "    # 12. Add the parse_dollars function.\n",
+    "    def parse_dollars(s):\n",
+    "        # if s is not a string, return NaN\n",
+    "        if type(s) != str:\n",
+    "            return np.nan\n",
+    "        # if input is of the form $###.# million\n",
+    "        if re.match(r'\\$\\s*\\d+\\.?\\d*\\s*milli?on', s, flags=re.IGNORECASE):\n",
+    "            # remove dollar sign and \" million\"\n",
+    "            s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
+    "            # convert to float and multiply by a million\n",
+    "            value = float(s) * 10**6\n",
+    "            # return value\n",
+    "            return value\n",
     "    \n",
+    "        # if input is of the form $###.# billion\n",
+    "        elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*billi?on', s, flags=re.IGNORECASE):\n",
+    "            # remove dollar sign and \" billion\"\n",
+    "            s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
+    "            # convert to float and multiply by a billion\n",
+    "            value = float(s) * 10**9\n",
+    "            # return value\n",
+    "            return value\n",
     "    \n",
-    "        \n",
+    "        # if input is of the form $###,###,###\n",
+    "        elif re.match(r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)', s, flags=re.IGNORECASE):\n",
+    "            # remove dollar sign and commas\n",
+    "            s = re.sub('\\$|,','', s)\n",
+    "            # convert to float\n",
+    "            value = float(s)\n",
+    "            # return value\n",
+    "            return value\n",
+    "    \n",
+    "        # otherwise, return NaN\n",
+    "        else:\n",
+    "            return np.nan\n",
+    "    \n",
     "    # 13. Clean the box office column in the wiki_movies_df DataFrame.\n",
     "\n",
     "    \n",
