--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -134,7 +134,7 @@
     "            return np.nan\n",
     "    \n",
     "    # 13. Clean the box office column in the wiki_movies_df DataFrame.\n",
-    "\n",
+    "    wiki_movies_df['box_office'] = box_office.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
     "    \n",
     "    # 14. Clean the budget column in the wiki_movies_df DataFrame.\n",
     "    \n",
