Cleaned budget column.

--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -135,10 +135,19 @@
     "    \n",
     "    # 13. Clean the box office column in the wiki_movies_df DataFrame.\n",
     "    wiki_movies_df['box_office'] = box_office.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
+    "    wiki_movies_df.drop('Box office', axis=1, inplace=True)\n",
     "    \n",
     "    # 14. Clean the budget column in the wiki_movies_df DataFrame.\n",
+    "    budget = wiki_movies_df['Budget'].dropna()\n",
+    "    budget = budget.map(lambda x: ' '.join(x) if type(x) == list else x)\n",
+    "    # Remove values between dollar sign and hyphen\n",
+    "    budget = budget.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)\n",
+    "    # Remove citation references\n",
+    "    budget = budget.str.replace(r'\\[\\d+\\]\\s*', '')\n",
+    "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
+    "    # Drop budget column\n",
+    "    wiki_movies_df.drop('Budget', axis=1, inplace=True)\n",
     "    \n",
-    "\n",
     "    # 15. Clean the release date column in the wiki_movies_df DataFrame.\n",
     "    \n",
     "\n",
