Cleaned release data and running time columns.

--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "# 2 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
+    "file_dir = 'C:/Users/nateb/Documents/Data Bootcamp 2021/Week 8/Movies-ETL/'\n",
     "\n",
     "def wiki_import():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
@@ -149,10 +150,23 @@
     "    wiki_movies_df.drop('Budget', axis=1, inplace=True)\n",
     "    \n",
     "    # 15. Clean the release date column in the wiki_movies_df DataFrame.\n",
+    "    release_date = wiki_movies_df['Release date'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
+    "    date_form_one = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s[123]\\d,\\s\\d{4}'\n",
+    "    date_form_two = r'\\d{4}.[01]\\d.[123]\\d'\n",
+    "    date_form_three = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s\\d{4}'\n",
+    "    date_form_four = r'\\d{4}'\n",
+    "    # Use pandas to_datetime\n",
+    "    wiki_movies_df['release_date'] = pd.to_datetime(release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})')[0], infer_datetime_format=True)\n",
     "    \n",
-    "\n",
     "    # 16. Clean the running time column in the wiki_movies_df DataFrame.\n",
-    "    \n",
+    "    running_time = wiki_movies_df['Running time'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
+    "    running_time_extract = running_time.str.extract(r'(\\d+)\\s*ho?u?r?s?\\s*(\\d*)|(\\d+)\\s*m')\n",
+    "    # Convert strings to numeric\n",
+    "    running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)\n",
+    "    # Convert to minutes\n",
+    "    wiki_movies_df['running_time'] = running_time_extract.apply(lambda row: row[0]*60 + row[1] if row[2] == 0 else row[2], axis=1)\n",
+    "    # Drop running time \n",
+    "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
     "    # Return three variables. The first is the wiki_movies_df DataFrame\n",
     "    \n",
     "    return wiki_movies_df, kaggle_metadata, ratings "
@@ -165,7 +179,7 @@
    "outputs": [],
    "source": [
     "# 17. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = \n",
+    "file_dir = 'C:/Users/nateb/Documents/Data Bootcamp 2021/Week 8/Movies-ETL/'\n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
     "# The Kaggle metadata\n",
