Cleaned Kaggle data and merged dataframes.

--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -190,18 +190,31 @@
     "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
     "\n",
     "    # 2. Clean the Kaggle metadata.\n",
-    "\n",
+    "    kaggle_metadata = kaggle_metadata[kaggle_metadata['adult'] == 'False'].drop('adult',axis='columns')\n",
+    "    # Create boolean column\n",
+    "    kaggle_metadata['video'] = kaggle_metadata['video'] == 'True'\n",
+    "    # Convert these columns to numbers and raise errors\n",
+    "    kaggle_metadata['budget'] = kaggle_metadata['budget'].astype(int)\n",
+    "    kaggle_metadata['id'] = pd.to_numeric(kaggle_metadata['id'], errors='raise')\n",
+    "    kaggle_metadata['popularity'] = pd.to_numeric(kaggle_metadata['popularity'], errors='raise')\n",
+    "    # Convert to datetime\n",
+    "    kaggle_metadata['release_date'] = pd.to_datetime(kaggle_metadata['release_date'])\n",
+    "    \n",
     "    # 3. Merged the two DataFrames into the movies DataFrame.\n",
-    "\n",
+    "    movies_df = pd.merge(wiki_movies_df, kaggle_metadata, on='imdb_id', suffixes=['_wiki','_kaggle'])\n",
     "\n",
     "    # 4. Drop unnecessary columns from the merged DataFrame.\n",
-    "\n",
+    "    movies_df.drop(columns=['title_wiki','release_date_wiki','Language','Production company(s)'], inplace=True)\n",
     "\n",
     "    # 5. Add in the function to fill in the missing Kaggle data.\n",
-    "\n",
+    "    def fill_missing_kaggle_data(df, kaggle_column, wiki_column):\n",
+    "        df[kaggle_column] = df.apply(lambda row: row[wiki_column] if row[kaggle_column] == 0 else row[kaggle_column], axis=1)\n",
+    "        df.drop(columns=wiki_column, inplace=True)\n",
     "\n",
     "    # 6. Call the function in Step 5 with the DataFrame and columns as the arguments.\n",
-    "\n",
+    "    fill_missing_kaggle_data(movies_df, 'runtime', 'running_time')\n",
+    "    fill_missing_kaggle_data(movies_df, 'budget_kaggle', 'budget_wiki')\n",
+    "    fill_missing_kaggle_data(movies_df, 'revenue', 'box_office')\n",
     "\n",
     "    # 7. Filter the movies DataFrame for specific columns.\n",
     "\n",
