--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -217,14 +217,46 @@
     "    fill_missing_kaggle_data(movies_df, 'revenue', 'box_office')\n",
     "\n",
     "    # 7. Filter the movies DataFrame for specific columns.\n",
-    "\n",
+    "    movies_df['video'].value_counts(dropna=False)\n",
     "\n",
     "    # 8. Rename the columns in the movies DataFrame.\n",
-    "\n",
+    "    movies_df = movies_df.loc[:, ['imdb_id','id','title_kaggle','original_title','tagline','belongs_to_collection','url','imdb_link',\n",
+    "                       'runtime','budget_kaggle','revenue','release_date_kaggle','popularity','vote_average','vote_count',\n",
+    "                       'genres','original_language','overview','spoken_languages','Country',\n",
+    "                       'production_companies','production_countries','Distributor',\n",
+    "                       'Producer(s)','Director','Starring','Cinematography','Editor(s)','Writer(s)','Composer(s)','Based on'\n",
+    "                      ]]\n",
+    "    \n",
+    "    movies_df.rename({'id':'kaggle_id',\n",
+    "                  'title_kaggle':'title',\n",
+    "                  'url':'wikipedia_url',\n",
+    "                  'budget_kaggle':'budget',\n",
+    "                  'release_date_kaggle':'release_date',\n",
+    "                  'Country':'country',\n",
+    "                  'Distributor':'distributor',\n",
+    "                  'Producer(s)':'producers',\n",
+    "                  'Director':'director',\n",
+    "                  'Starring':'starring',\n",
+    "                  'Cinematography':'cinematography',\n",
+    "                  'Editor(s)':'editors',\n",
+    "                  'Writer(s)':'writers',\n",
+    "                  'Composer(s)':'composers',\n",
+    "                  'Based on':'based_on'\n",
+    "                 }, axis='columns', inplace=True)\n",
     "\n",
     "    # 9. Transform and merge the ratings DataFrame.\n",
+    "    rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')\n",
     "    \n",
-    "    return wiki_movies_df, movies_with_ratings_df, movies_df\n"
+    "    # rename columns\n",
+    "    rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]\n",
+    "    # Merge\n",
+    "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n",
+    "    # fill missing values\n",
+    "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n",
+    "    \n",
+    "    return wiki_movies_df, movies_with_ratings_df, movies_df"
    ]
   },
   {
